[package]
name = "sub-script"
version = "0.8.0"
authors = ["Robert G. Jakabosky <robert@polymesh.network>"]
edition = "2018"
license = "Apache-2.0"
description = "Scripting tool for Substrate chains"
keywords = ["scripting", "blockchain", "substrate", "rhai"]
repository = "https://github.com/PolymeshAssociation/sub-script"
homepage = "https://github.com/PolymeshAssociation/sub-script"

[patch.crates-io]
frame-support = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03" }
frame-system = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03" }
sp-application-crypto = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03" }
sp-arithmetic = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03" }
sp-io = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03" }
sp-core = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03" }
sp-std = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03" }
sp-version = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03" }
sp-runtime = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03" }
sp-runtime-interface = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03" }

polymesh-primitives = { git = "https://github.com/PolymeshAssociation/Polymesh", branch = "develop" }

bulletproofs = { version = "4.0.0", git = "https://github.com/PolymeshAssociation/bulletproofs", branch = "polymesh" }

confidential_assets = { git = "ssh://git@github.com/PolymeshAssociation/confidential_assets.git", branch = "MESH-2112-improve_proofs" }
#confidential_assets = { path = "../confidential_assets" }

[dependencies]
anyhow = "1.0.44"
log = "0.4"
dotenv = "0.15"
env_logger = "0.9"
structopt = "0.3.25"

# Client
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = "1.0"
dashmap = "5.3"
url = "2.2"
ws = { version = "0.9", features = [ "ssl", "permessage-deflate" ] }
crossbeam-channel = "0.5"

# substrate
sp-core = { version = "7.0", default-features = false }
sp-runtime = { version = "7.0", default-features = false }
frame-support = { version = "4.0.0-dev", default-features = false }
frame-metadata = { version = "15.0.0", default-features = false, features = ["std"] }
parity-scale-codec = "3.0"

scale-info = { version = "=2.4.0", default-features = false, optional = true }

# rhai
rhai = { version = "=1.6.1", default-features = false, features = ["sync", "only_i64", "no_float", "decimal", "serde", "metadata"]}
indexmap = "1.9"

hex = "0.4"
rust_decimal = "1.23"
smartstring = "1.0"

# libp2p
bs58 = { version = "0.4.0", optional = true }
libp2p-core = { version = "0.37.0", optional = true }

# Ledger
ledger-transport-hid = { version = "0.9.0", optional = true }
ledger-apdu = { version = "0.9.0", optional = true }

# Polymesh
polymesh-primitives = { git = "https://github.com/PolymeshAssociation/Polymesh", branch = "develop", default-features = false, optional = true }

# Postgres
postgres = { version = "0.19", optional = true, features = [ "with-serde_json-1" ] }
postgres-types = { version = "0.2.3", optional = true, features = [ "derive" ] }
bytes = { version = "1.1.0", optional = true }

# Confidential Assets
confidential_assets = { version = "1.0.0", default-features = false, optional = true }

# Crypto
rand = { version = "0.8", optional = true, features = ["getrandom", "alloc"], default-features = false }
curve25519-dalek = { package = "curve25519-dalek-ng", optional = true, version = "4", default-features = false, features = ["nightly", "alloc"] }

[features]
default = [ "std", "u64_backend", "pg", "ledger", "polymesh", "v12", "v13", "v14", "libp2p", "utils" ]

# Backends
u32_backend = [
	"curve25519-dalek/u32_backend",
	"confidential_assets?/u32_backend",
	"polymesh-primitives/u32_backend",
]
u64_backend = [
	"curve25519-dalek/u64_backend",
	"confidential_assets?/u64_backend",
	"polymesh-primitives/u64_backend",
]
avx2_backend = [
	"curve25519-dalek/avx2_backend",
	"confidential_assets?/avx2_backend",
]
simd_backend = [
	"curve25519-dalek/simd_backend",
	"confidential_assets?/simd_backend",
]

# Enable support for very old Polymesh version.
polymesh_v2 = [
	"polymesh",
]

libp2p = [ "bs58", "libp2p-core" ]

v12 = [ "frame-metadata/v12" ]
v13 = [ "frame-metadata/v13" ]
v14 = [ "frame-metadata/v14", "scale-info" ]

# Ledger
ledger = [
	"ledger-transport-hid",
	"ledger-apdu",
]

# Utils plugin.
utils = []

# Confidential assets
confidential_assets = [
	"dep:confidential_assets",
	"rayon",
	"discrete_log",
]

# Faster Elgamal decryption.
rayon = [
	"confidential_assets?/rayon",
]
discrete_log = [
	"confidential_assets?/discrete_log",
]

# Polymesh
polymesh = [
	"polymesh-primitives",
	"curve25519-dalek",
	"rand",
]

# Postgres
pg = [
	"postgres",
	"postgres-types",
	"bytes",
]

no_std = [
	"confidential_assets?/no_std",
	"polymesh-primitives/no_std",
]

std = [
	"confidential_assets?/std",
	"rayon",
	"discrete_log",
	"polymesh-primitives/std",
]
